--- a/frontend/grid.html
+++ b/frontend/grid.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <!--container 생성-->
-    <div class = "container">
+    <div class = "container fl">
     <!--row(행) 생성-->
     <div class = "row">
     <!--contents 나열-->
